--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,12 @@
 {
-  "name": "webxbw2008/gii",
-  "description": "the new thinkphp framework",
-  "type": "project",
-  "keywords": [
-    "framework",
-    "thinkphp",
-    "ORM"
-  ],
-  "homepage": "http://thinkphp.cn/",
-  "license": "Apache-2.0",
-  "authors": [
-    {
-      "name": "liu21st",
-      "email": "liu21st@gmail.com"
-    }
-  ],
+  "name"  : "webxbw2008/gii",
+  "type"  : "project",
+  "homepage": "http://www.workerman.net",
+  "license" : "MIT",
   "require": {
-    "php": ">=5.4.0",
-    "topthink/framework": "~5.0.0",
-    "topthink/think-captcha": "1.*",
-    "topthink/think-migration": "1.*",
-    "topthink/think-testing": "1.*",
-    "topthink/think-mongo": "1.*",
-    "topthink/think-queue": "1.*",
-    "topthink/think-image": "1.*",
-    "topthink/think-worker": "^1.0",
-    "workerman/workerman-for-win": "^3.5",
-    "workerman/phpsocket.io": "^1.1",
-    "phpoffice/phpexcel": "^1.8"
+    "workerman/workerman" : ">=3.3.0"
   },
   "autoload": {
-    "psr-4": {
-      "app\\": "application"
-    }
-  },
-  "extra": {
-    "think-path": "thinkphp"
-  },
-  "config": {
-    "preferred-install": "dist"
+    "psr-4": {"Channel\\": "./src"}
   }
 }
