--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "require": {
     "php": ">=5.2.0",
     "ext-xml": "*",
-    "ext-xmlwriter": "*"
+    "ext-xmlwriter": "*",
+    "phpunit/phpunit": "^6.5"
   }
 }
