--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   },
   "autoload": {
     "psr-4": {
-      "miikou\\tool\\": "src/"
+      "miikou\\tool\\": "src/",
+      "miikou\\stopwords\\": "src/"
     }
   },
   "autoload-dev": {
