--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "autoload": {
     "psr-4": {
       "miikou\\tool\\": "src/",
-      "miikou\\stopwords\\": "src/"
+      "miikou\\stopwords\\": "src/",
+      "miikou\\analysis\\": "src/"
     }
   },
   "autoload-dev": {
